# asf_model_bav_prototype

./: .Hr_experiment.tmp.nlogo  .gitignore  Cargo.toml  all_global_variables.csv  all_grid_states.csv  all_individuals.csv  config.json  log4rs.yaml
R/: visuals.R
R/asf_bavaria_analysis/: experimental_script.Rmd  model_config_app.r  rust_pipeline.Rmd
input/landscape/: redDeer_global_50m.asc
output/: all_dispersers.csv  all_global_variables.csv  all_grid_states.csv  all_individuals.csv  all_roamers.csv  debugCellInfo.csv
src/: ageing.rs  behaviour.rs  carcass.rs  dispersal.rs  grid_functions.rs  group_functions.rs  homerange.rs  hunting.rs  interaction_layer.rs  main.rs  mortality.rs  movement.rs  pathogen.rs  pipeline.rs  reproduction.rs  roamers.rs  save_functions.rs  utility.rs
