[package]
name = "asf_model_bav_prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
log = "0.4"
log4rs = "0.12"
chrono = "0.4.19"
bson = "2.0"
kdtree = "0.6"
crossbeam = "0.8"
uuid = { version = "1.2", features = ["v4"] }

#serde = { version = "1", features = ["derive"] }
#serde_json = "1"
#lazy_static = "1.4"
#rand_distr = "0.4.3"
#rayon = "1.5"
#sif-kdtree = "0.6.0"
#ctrlc = "3.4.0"
#zip = "0.5.3"
#image = "0.24.7"